# mirofish_italian

./: .env.example  .gitignore  Dockerfile  PROGETTO.md  README-CN.md  README-EN.md  README-IT.md  README.md  docker-compose.yml  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: file_parser.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  autotest_e2e.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py  test_prompt_50agents.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/demo/: barilla_business_plan.xlsx
frontend/src/: App.vue  main.js
frontend/src/api/: simulation.js
frontend/src/components/: BusinessPlanModal.vue  GraphPanel.vue  HistoryDatabase.vue  LanguageSelector.vue  QuickTestModal.vue  QuickTestResults.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/config/: quickTestTemplates.js
frontend/src/i18n/: en.json  index.js  it.json
frontend/src/router/: index.js
(+8 files in other folders)
